<resources>
    <string name="app_name">Gym Log</string>
    <string name="title_activity_list_sessions">@string/app_name</string>

    <string name="action_filter">Filter</string>
    <string name="action_add_session">Add New Session</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="new_session_hint">Title (e.g. Chest and Triceps)</string>
</resources>
