<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add_session"
        android:title="@string/action_add_session"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        android:icon="@drawable/calendar"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
     android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />

</menu>
